# course_work3.1

./: README.md  pyproject.toml
src/: main.py  utils.py
tests/: test_utils.py
