[tool.poetry]
name = "course-work3-1"
version = "0.1.0"
description = ""
authors = ["Yura Filchakov <filchakov1993@gmail.com>"]
readme = "README.md"
packages = [{include = "course_work3"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
